fix shop page products from being squished into div, fix to shop section on front page

--- a/themes/inhabitent/sass/_archive.scss
+++ b/themes/inhabitent/sass/_archive.scss
@@ -73,6 +73,7 @@
 
       img {
         height: 200px;
+        object-fit: cover;
       }
 
       .entry-content {
