--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -66,13 +66,18 @@
       justify-content: space-between;
 
       .shop-terms {
-        width: 23%;
+        width: 23.5%;
         border: 1px solid #e1e1e1;
         border-top: 5px solid #e1e1e1;
-        padding-top: 13.5px;
+        padding: 0.75rem;
 
         p {
-          padding: 0 30px 0 10px;
+          font-family: $font__secondary;
+          font-size: 1rem;
+          line-height: 1.75;
+          color: #404040;
+          font-weight: 100px;
+          margin-bottom: 1.5rem;
 
           a {
             padding: 12px 24px;
